# adtool_legacy

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  auto_disc.html  exp_1.py  index.html  search.js  start_app.py  start_app.sh  test.py  todo.md
services/base/AutoDiscServer/libs/adtool_custom/systems/flow_lenia/: .envrc  pyproject.toml
services/base/AutoDiscServer/libs/adtool_custom/systems/flow_lenia/flow_lenia/: descriptor.py  main.py
services/base/AutoDiscServer/libs/auto_disc/: .gitlab-ci.yml  ExperimentPipeline.py  LICENSE  README.md  pyproject.toml  setup.py  todo.md
services/base/AutoDiscServer/libs/auto_disc/.gitlab-ci/auto_disc/: Dockerfile
services/base/AutoDiscServer/libs/auto_disc/auto_disc/: ExperimentPipeline.py  debug.json  debug_newarch.json  run.py
services/base/AutoDiscServer/libs/auto_disc/auto_disc/85c9697aca51ea39937a4638b17ec54d6381f63f/: metadata
services/base/AutoDiscServer/libs/auto_disc/auto_disc/explorers/: IMGEPExplorer.py  __init__.py
services/base/AutoDiscServer/libs/auto_disc/auto_disc/explorers/tests/: test_IMGEPExplorer.py
services/base/AutoDiscServer/libs/auto_disc/auto_disc/maps/: Map.py  MeanBehaviorMap.py  NEATParameterMap.py  UniformParameterMap.py  __init__.py
services/base/AutoDiscServer/libs/auto_disc/auto_disc/maps/lenia/: LeniaParameterMap.py  LeniaStatistics.py
services/base/AutoDiscServer/libs/auto_disc/auto_disc/maps/tests/: test_MeanBehaviorMap.py  test_NEATParameterMap.py  test_UniformParameterMap.py
services/base/AutoDiscServer/libs/auto_disc/auto_disc/systems/: ExponentialMixture.py  Lenia.py  LeniaCPPN.py  __init__.py
services/base/AutoDiscServer/libs/auto_disc/auto_disc/systems/tests/: test_ExponentialMixture.py  test_Lenia.py  test_LeniaCPPN.py
services/base/AutoDiscServer/libs/auto_disc/auto_disc/tests/: test_ExperimentPipeline.py  test_registration.py  test_run.py
services/base/AutoDiscServer/libs/auto_disc/auto_disc/utils/callbacks/: __init__.py  base_callback.py  base_expe_db_callback.py
services/base/AutoDiscServer/libs/auto_disc/auto_disc/utils/expose_config/: defaults.py  defaults.py.rej
services/base/AutoDiscServer/libs/auto_disc/auto_disc/utils/logger/: __init__.py
services/base/AutoDiscServer/libs/auto_disc/auto_disc/utils/misc/: db.py  history.py  torch_utils.py
services/base/AutoDiscServer/libs/auto_disc/auto_disc/utils/mutators/: __init__.py  base_mutator.py  gaussian_mutator.py
services/base/AutoDiscServer/libs/auto_disc/auto_disc/wrappers/: BoxProjector.py  CPPNWrapper.py  IdentityWrapper.py  MessageQClient.py  SaveWrapper.py  TransformWrapper.py  WrapperPipeline.py  __init__.py
services/base/AutoDiscServer/libs/auto_disc/auto_disc/wrappers/tests/: test_BoxProjector.py  test_CPPNWrapper.py  test_IdentityWrapper.py  test_MessageQClient.py  test_SaveWrapper.py  test_TransformWrapper.py  test_WrapperPipeline.py  test_int_Wrappers.py  test_mutators.py
services/base/AutoDiscServer/libs/auto_disc/auto_disc_legacy/: __init__.py  base_autodisc_module.py  experiment_pipeline.py  run_old.py
services/base/AutoDiscServer/libs/auto_disc/auto_disc_legacy/explorers/: __init__.py  base_explorer.py  imgep_explorer.py
services/base/AutoDiscServer/libs/auto_disc/auto_disc_legacy/input_wrappers/: __init__.py  base_input_wrapper.py
services/base/AutoDiscServer/libs/auto_disc/auto_disc_legacy/input_wrappers/generic/: __init__.py  dummy_input_wrapper.py  times_n_input_wrapper.py
services/base/AutoDiscServer/libs/auto_disc/auto_disc_legacy/output_representations/: __init__.py  base_output_representation.py
services/base/AutoDiscServer/libs/auto_disc/auto_disc_legacy/output_representations/generic/: __init__.py  dummy_output_representation.py
services/base/AutoDiscServer/libs/auto_disc/auto_disc_legacy/output_representations/specific/: __init__.py  lenia_output_representation.py  lenia_output_representation_hand_defined.py
services/base/AutoDiscServer/libs/auto_disc/auto_disc_legacy/systems/: __init__.py  base_system.py
services/base/AutoDiscServer/libs/auto_disc/auto_disc_legacy/systems/python_systems/: __init__.py  base_python_system.py  lenia.py
services/base/AutoDiscServer/libs/auto_disc/legacy/: __init__.py
services/base/AutoDiscServer/libs/auto_disc/src/auto_disc/: ExperimentPipeline.py  run.py
services/base/AutoDiscServer/libs/auto_disc/tests/: test_ExperimentPipeline.py  test_registration.py  test_run.py
services/base/AutoDiscServer/libs/auto_disc/tests/integration/: config.json
services/base/AutoDiscServer/libs/auto_disc/utils/interaction/: Broker.py  FeedbackQueueClient.py  test_FeedbackQueueClient.py
services/base/AutoDiscServer/libs/custom_modules/: build.py  pyproject.toml
services/base/AutoDiscServer/libs/custom_modules/adtool_custom/systems/: TwoE.py
services/base/AutoDiscServer/libs/default_modules/: pyproject.toml
services/base/AutoDiscServer/libs/default_modules/adtool_default/maps/: LeniaParameterMap.py  MeanBehaviorMap.py  UniformParameterMap.py
services/base/AutoDiscServer/libs/default_modules/adtool_default/systems/: ExponentialMixture.py  Lenia.py  LeniaCPPN.py
(+1303 files in other folders)
