[tool.poetry]
name = "auto-disc"
version = "0.1.0"
description = "Pure Python library for automated, curiosity-based exploration."
authors = ["LIN Jesse <jesse.lin@inria.fr>", "Clément Romac <cromac@inria.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
addict = "2.4.0"
matplotlib = "3.5.3"
numpy = "1.21.6"
pillow = "9.2.0"
requests = "2.28.1"
graphviz = "0.20.1"
neat-python = "0.92"
torch = "1.7.1"
tinydb = "4.7.0"
imageio = "2.28.0"
imageio-ffmpeg = "0.4.7"
sqlalchemy = "2.0.3"
mergedeep = "1.3.4"
filetype = "1.2.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-mock = "^3.10.0"
coverage = "^7.2.7"


[tool.poetry.group.dev.dependencies]
debugpy = "^1.6.7"
autopep8 = "^2.0.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"
