[tool.poetry]
name = "auto_disc"
version = "0.1.0"
description = "Pure Python library for automated, curiosity-based exploration."
authors = ["LIN Jesse <jesse.lin@inria.fr>", "Clément Romac <cromac@inria.fr>"]
readme = "README.md"

# NOTE: most of these are here to support auto_disc.legacy
#       what is actually necessary is *likely*:
#           imageio
#           imageio-ffmpeg
#           mergedeep
#           pillow
#           requests
#           urllib3
[tool.poetry.dependencies]
addict = "2.4.0"
filetype = "1.2.0"
graphviz = "0.20.1"
imageio = "2.28.0"
imageio-ffmpeg = "0.4.7"
matplotlib = "3.5.3"
mergedeep = "1.3.4"
neat-python = "0.92"
numpy = "1.21.6"
pillow = "9.2.0"
python = ">=3.9,<3.11"
requests = "2.28.1"
sqlalchemy = "2.0.3"
tinydb = "4.7.0"
torch = "1.7.1"
urllib3 = ">=1.21.1,<1.27"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
pytest-mock = "^3.10.0"
coverage = "^7.2.7"


[tool.poetry.group.dev.dependencies]
debugpy = "^1.6.7"
autopep8 = "^2.0.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"
